--- a/src/assets/css/random.css
+++ b/src/assets/css/random.css
@@ -1,108 +1,154 @@
 .random {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: 1.5rem;
-    padding: 2.5rem 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 1.5rem;
+  padding: 2.5rem 0;
 }
 
 .title {
-    color: #ffd212;
-    top: 3rem;
-    font-size: 60px;
+  color: #ffd212;
+  top: 3rem;
+  font-size: 60px;
 }
 
 .name {
-    width: 100%;
-    height: 5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #bbb;
-    font-size: 50px;
+  width: 100%;
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #bbb;
+  font-size: 50px;
 }
 
 .box {
-    width: 80%;
-    height: 18rem;
-    background: #413971;
-    top: 35%;
-    border-radius: 1rem;
-    border: 3px solid #f5db79;
-    padding: .8rem;
+  width: 80%;
+  height: 18rem;
+  background: #413971;
+  top: 35%;
+  border-radius: 1rem;
+  border: 3px solid #f5db79;
+  padding: 0.8rem;
 }
 
 .randomBox {
-    width: 100%;
-    height: 100%;
-    background: #ccc;
-    border-radius: .5rem;
-    background: #2a254f;
-    padding: 1rem;
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  background: #ccc;
+  border-radius: 0.5rem;
+  background: #2a254f;
+  padding: 1rem;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  overflow: hidden;
 }
 
 .boxItem {
-    width: 15%;
-    border-radius: .3rem;
-    height: 100%;
-    background: #413971;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 130px;
-    font-weight: 700;
-    color: #ccc;
+  width: 15%;
+  border-radius: 0.3rem;
+  height: 100%;
+  /* background: #413971; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 130px;
+  font-weight: 700;
+  color: #ccc;
 }
-
+.bg-blue {
+  background: #413971;  
+}
 .item {
-    width: 10rem;
-    height: 2.6rem;
-    background: #393264;
-    border: .15rem solid #f5db79;
-    color: #ffda56;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  width: 10rem;
+  height: 2.6rem;
+  background: #393264;
+  border: 0.15rem solid #f5db79;
+  color: #ffda56;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .btn {
-    width: 17rem;
-    height: 3.8rem;
-    background: #fbce3d url(../images/btn-yellow-bg.jpg) no-repeat top;
-    border-radius: .3rem;
-    background-size: cover;
-    bottom: 5rem;
-    color: #6a4c08;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 26px;
+  width: 17rem;
+  height: 3.8rem;
+  background: #fbce3d url(../images/btn-yellow-bg.jpg) no-repeat top;
+  border-radius: 0.3rem;
+  background-size: cover;
+  bottom: 5rem;
+  color: #6a4c08;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 26px;
 }
 
 .btn:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .formTable {
-    width: 60%;
-    color: #fff;
-    margin-top: 3rem;
+  width: 60%;
+  color: #fff;
+  margin-top: 3rem;
 }
 
 .formTable,
 .thead > th,
 .tbody > td {
-    border: 1px solid #ccc;
+  border: 1px solid #ccc;
 }
 
 .thead > th,
 .tbody > td {
-    padding: 1rem 2rem;
-    margin-bottom: 3rem;
+  padding: 1rem 2rem;
+  margin-bottom: 3rem;
+}
+
+.rotating0 {
+  width: 100%;
+  line-height: 1.2em;
+  animation: anim 0.2s linear infinite;
+}
+.rotating1 {
+  width: 100%;
+  line-height: 1.2em;
+  animation: anim 0.22s linear infinite;
+}
+.rotating2 {
+  width: 100%;
+  line-height: 1.2em;
+  animation: anim 0.24s linear infinite;
+}
+.rotating3 {
+  width: 100%;
+  line-height: 1.2em;
+  animation: anim 0.26s linear infinite;
+}
+.rotating4 {
+  width: 100%;
+  line-height: 1.2em;
+  animation: anim 0.28s linear infinite;
+}
+.rotating5 {
+  width: 100%;
+  line-height: 1.2em;
+  animation: anim 0.3s linear infinite;
+}
+
+@keyframes anim {
+  0% {
+    transform: translate(0, 3rem);
+  }
+  99% {
+    transform: translate(0, -4em);
+  }
+  100% {
+    transform: translate(0, 0);
+  }
 }
