--- a/src/assets/css/random.css
+++ b/src/assets/css/random.css
@@ -8,6 +8,18 @@
   padding: 2.5rem 0;
 }
 
+.logo {
+  width: 20%;
+  height: 20%;
+  object-fit: cover;
+  top: 1rem;
+  left: 1rem;
+  z-index: 2;
+  position: absolute;
+  background-image: url('../imgs/logo.png');
+  background-repeat: no-repeat;
+}
+
 .title {
   color: #ffd212;
   top: 3rem;
@@ -22,6 +34,10 @@
   align-items: center;
   color: #bbb;
   font-size: 50px;
+}
+
+.nameAnimations {
+  animation: name .2s ease-in-out;
 }
 
 .box {
@@ -49,10 +65,9 @@
 }
 
 .boxItem {
-  width: 15%;
+  width: 13%;
   border-radius: 0.3rem;
   height: 100%;
-  /* background: #413971; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -79,6 +94,7 @@
   height: 3.8rem;
   background: #fbce3d url(../images/btn-yellow-bg.jpg) no-repeat top;
   border-radius: 0.3rem;
+  border: none;
   background-size: cover;
   bottom: 5rem;
   color: #6a4c08;
@@ -86,6 +102,7 @@
   justify-content: center;
   align-items: center;
   font-size: 26px;
+  font-weight: 700;
 }
 
 .btn:hover {
@@ -93,7 +110,7 @@
 }
 
 .formTable {
-  width: 60%;
+  width: 80%;
   color: #fff;
   margin-top: 3rem;
 }
@@ -101,13 +118,16 @@
 .formTable,
 .thead > th,
 .tbody > td {
-  border: 1px solid #ccc;
+  border: 3px dotted #f5db79;
+  border-radius: .3rem;
+  font-size: 18px;
 }
 
 .thead > th,
 .tbody > td {
   padding: 1rem 2rem;
   margin-bottom: 3rem;
+  text-align: center;
 }
 
 .rotating0 {
@@ -150,5 +170,14 @@
   }
   100% {
     transform: translate(0, 0);
+  }
+}
+
+@keyframes name {
+  from {
+    font-size: 10px;
+  }
+  to {
+    font-size: 50px;
   }
 }
