--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -9,8 +9,7 @@
 
 .app {
   width: 100%;
-  /* height: 100%; */
   position: absolute;
-  /* background: linear-gradient(to bottom, #1C0C5B 0%, #C06C84 100%) */
   background: linear-gradient(#051e39,#88233a);
+  overflow: hidden;
 }
