Changes to be committed: 	modified:   src/Modal.jsx 	modified:   src/assets/css/random.css 	modified:   src/components/Random.jsx 	modified:   src/style.css

--- a/src/assets/css/random.css
+++ b/src/assets/css/random.css
@@ -130,6 +130,11 @@
   text-align: center;
 }
 
+.thead {
+  background-color: #413971;
+  color: #ffd212;
+}
+
 .rotating0 {
   width: 100%;
   line-height: 1.2em;
