--- a/src/style.css
+++ b/src/style.css
@@ -29,30 +29,32 @@
 .modal {
   position: absolute;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 840px;
+  justify-content: center;
+  top: 7rem;
+  width: 100%;
   height: 260px;
   text-transform: uppercase;
-  background-color: rgb(226, 226, 226);
   border-radius: 5px;
   font-size: 1.4rem;
   font-weight: 600;
   letter-spacing: 0.2rem;
   z-index: 999;
-  padding: 24px;
 }
 .iconModal {
   width: 70px;
   height: 70px;
 }
 .highlight {
-  color: red;
-  font-size: 2rem;
+  color: #f5db79;
+  font-size: 70px;
+  font-weight: 800;
 }
 #canvas {
   height: 100%;
+}
+
+.congrats {
+  font-size: 38px;
+  color: #ccc;
+  font-weight: 700;
 }
