--- a/src/style.css
+++ b/src/style.css
@@ -3,11 +3,11 @@
   opacity: 0;
   position: absolute;
   top: 0;
-  opacity: 0.98;
+  opacity: 0.1;
   height: 100%;
   bottom: 0;
-  background-color: rgba(255, 255, 255, 0.2);
-  transition: visibility 0s linear 0.83s, opacity 0.83s linear;
+  background: rgba(255, 255, 255, 0.2);
+  transition: visibility 0s linear 0.2s, opacity 0.2s linear;
 }
 .container.show {
   visibility: visible;
@@ -29,7 +29,9 @@
 .modal {
   position: absolute;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   top: 7rem;
   width: 100%;
   height: 260px;
@@ -53,8 +55,15 @@
   height: 100%;
 }
 
+.user {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .congrats {
-  font-size: 38px;
-  color: #ccc;
+  font-size: 80px;
+  color: #ddd;
   font-weight: 700;
 }
