--- a/src/style.css
+++ b/src/style.css
@@ -51,6 +51,11 @@
   font-size: 70px;
   font-weight: 800;
 }
+.highlightt {
+  color: #f5db79;
+  font-size: 50px;
+  font-weight: 800;
+}
 #canvas {
   height: 100%;
 }
@@ -64,6 +69,11 @@
 
 .congrats {
   font-size: 80px;
+  color: #ddd;
+  font-weight: 700;
+}
+.congratss {
+  font-size: 50px;
   color: #ddd;
   font-weight: 700;
 }
