--- a/src/assets/css/random.css
+++ b/src/assets/css/random.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@200;300;400;500;600;700;800;900&display=swap');
+
+* {
+  font-family: 'Noto Sans', sans-serif;
+}
+
 .random {
   width: 100%;
   min-height: 100vh;
