--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@200;300;400;500;600;700;800;900&display=swap');
+
+* {
+  font-family: 'Noto Sans', sans-serif;
+}
+
 .container {
   visibility: hidden;
   opacity: 0;
@@ -7,6 +13,7 @@
   height: 100%;
   bottom: 0;
   background: rgba(255, 255, 255, 0.2);
+  /* background: rgba(163, 27, 88, 0.2) */
   transition: visibility 0s linear 0.2s, opacity 0.2s linear;
 }
 .container.show {
