--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@200;300;400;500;600;700;800;900&display=swap");
 
 * {
-  font-family: 'Noto Sans', sans-serif;
+  font-family: "Noto Sans", sans-serif;
 }
 
 .container {
@@ -12,8 +12,11 @@
   opacity: 0.1;
   height: 100%;
   bottom: 0;
-  background: rgba(255, 255, 255, 0.2);
+  /* background: rgba(255, 255, 255, 0.2); */
   /* background: rgba(163, 27, 88, 0.2) */
+  background-image: url("https://demoda.vn/wp-content/uploads/2022/01/background-tet-nen-hoa-mai.png");
+  background-position: center;
+  background-size: contain;
   transition: visibility 0s linear 0.2s, opacity 0.2s linear;
 }
 .container.show {
@@ -39,7 +42,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  top: 7rem;
+  top: 12rem;
   width: 100%;
   height: 260px;
   text-transform: uppercase;
@@ -87,6 +90,7 @@
 
 #canvas {
   height: 100%;
+  opacity: 0.6;
 }
 
 .cwrap,
