--- a/src/assets/css/random.css
+++ b/src/assets/css/random.css
@@ -43,7 +43,8 @@
 }
 
 .nameAnimations {
-  animation: name 0.2s ease-in-out;
+  animation-delay: 2s;
+  animation: name 1s ease-in-out;
 }
 
 .box {
