--- a/src/assets/css/random.css
+++ b/src/assets/css/random.css
@@ -11,7 +11,7 @@
   align-items: center;
   flex-direction: column;
   gap: 1.5rem;
-  padding: 2.5rem 0;
+  padding: 4rem 0;
 }
 
 .logo {
@@ -30,6 +30,7 @@
   color: #ffd212;
   top: 3rem;
   font-size: 60px;
+  margin-bottom: 4rem;
 }
 
 .name {
