--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@200;300;400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;600;700;800;900&display=swap');
 
 * {
-  font-family: "Noto Sans", sans-serif;
+  font-family: 'Roboto Slab', serif;
 }
 
 .container {
@@ -51,6 +51,7 @@
   font-weight: 600;
   letter-spacing: 0.2rem;
   z-index: 999;
+  font-family: 'Roboto Slab', serif;
 }
 .iconModal {
   width: 70px;
@@ -60,11 +61,14 @@
   color: #f5db79;
   font-size: 70px;
   font-weight: 800;
+  font-family: 'Roboto Slab', serif;
+  font-weight: 900;
 }
 .highlightt {
   color: #f5db79;
   font-size: 50px;
   font-weight: 800;
+  font-family: 'Roboto Slab', serif;
 }
 #canvas {
   height: 100%;
@@ -81,10 +85,15 @@
   font-size: 80px;
   color: #ddd;
   font-weight: 700;
+  font-family: 'Roboto Slab', serif;
+  margin-bottom: 2rem;
+  font-weight: 900;
 }
 .congratss {
   font-size: 50px;
   color: #ddd;
+  font-weight: 700;
+  font-family: 'Roboto Slab', serif;
   font-weight: 700;
 }
 
