Changes to be committed: 	modified:   src/Modal.jsx 	modified:   src/components/Random.jsx 	modified:   src/style.css

--- a/src/style.css
+++ b/src/style.css
@@ -88,6 +88,7 @@
   font-family: 'Roboto Slab', serif;
   margin-bottom: 2rem;
   font-weight: 900;
+  text-align: center;
 }
 .congratss {
   font-size: 50px;
